<resources>
    <string name="app_name">BillingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="items">Items</string>
    <string name="bills">Bills</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="item_name">Item Name</string>
    <string name="order">Order</string>
    <string name="enter_name">Enter Name</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="are_you_sure_you_want_to_delete_this_list">Are you sure you want to delete this list?</string>
    <string name="select_item">Select Item</string>
    <string name="no">No</string>
    <string name="out_of_limit">Out of limit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="select_an_item">Select an item</string>
    <string name="order_placed">Order Placed</string>
    <string name="select_the_quantity">Select the quantity</string>
    <string name="add_items">Add items</string>
    <string-array name="itemsString"></string-array>
</resources>