<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".BillsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_item"
        android:textSize="@dimen/sp_20"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/itemsString"
        android:minHeight="48dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvItems"
            android:hint="@string/items"
            android:textSize="@dimen/sp_20"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="1dp"
            android:backgroundTint="@color/grey"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:id="@+id/btnMinus"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:textSize="@dimen/sp_20"
            android:id="@+id/tvQuantity" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="1dp"
            android:backgroundTint="@color/grey"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:id="@+id/btnPlus"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_gravity="center"
        android:id="@+id/btnOrder"
        android:textSize="@dimen/sp_20"/>

</LinearLayout>